--- a/src/style.css
+++ b/src/style.css
@@ -1,13 +1,5 @@
 canvas{
   position: fixed;
-  top: 0;
-  left:0;
-  background-color: black;
-  height: 100%;
-  width: 100%;
-}
-
-.title{
-  font-size: 24px;
-  color:white
+  margin:0;
+  padding:0;
 }
